--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.16.4
 scipy==1.3.0
 jax==0.1.39
 jaxlib==0.1.21
+cvxpy==1.0.24
 scikit-learn==0.21.2
 sklearn-lvq==1.1.0
 tensorflow==1.14.0
